feat: Add vintage TV video player and enhance EDJS website
- Add vintage TV frame design with video player in Simple Comme Bonjour spectacle page
- Implement interactive play button overlay with JavaScript controls
- Fix rocket floating animation on home page with proper CSS keyframes
- Update spectacle page h3 titles with French articles (une/un)
- Replace hero section background with Asset 9@4x.png image
- Remove duplicate backgrounds and clean up hero section styling
- Enhance partners page organization and navigation
- Improve overall visual consistency and user experience

--- a/index.html
+++ b/index.html
@@ -122,6 +122,16 @@
       100% { opacity: 0.7; }
     }
 
+    /* Rocket Floating Animation */
+    @keyframes rocketFloat {
+      0%, 100% {
+        transform: translateY(-50%);
+      }
+      50% {
+        transform: translateY(-90px);
+      }
+    }
+
 
 
     /* Partners Slider Styles */
@@ -1986,7 +1996,7 @@
     
     <!-- About Section -->
     <section class="vs-about--section space space-extra-bottom z-index-common parallax-wrap overflow-hidden" style="background-color: #ffffff !important; background-image: none !important;">
-      <img src="assets/img/icon edjs-36.png" alt="L'École des jeunes spectateurs Rocket" class="vs-about--ele1 rocket-animation" data-wow-delay="0.35s" style="transform: scale(12.0);">
+      <img src="assets/img/icon edjs-36.png" alt="L'École des jeunes spectateurs Rocket" class="rocket-floating" data-wow-delay="0.35s" style="width: 180px !important; height: 180px !important; max-width: 180px !important; max-height: 180px !important; z-index: 9999 !important; position: fixed !important; right: 8% !important; top: 50% !important; animation: rocketFloat 3s ease-in-out infinite !important; transform: translateY(-50%) !important;">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 mb-30 wow animate__fadeInUp" data-wow-delay="0.25s">
@@ -2579,67 +2589,67 @@
         <div class="partners-track">
           <div class="partners-logos-set">
             <div class="partner-logo">
-              <img src="assets/img/partners/OCP_Group.svg.png" alt="OCP Group">
+              <a href="partners.html#ocp-group"><img src="assets/img/partners/OCP_Group.svg.png" alt="OCP Group"></a>
             </div>
             <div class="partner-logo">
-              <img src="assets/img/partners/fondation-mohammed-6-logo-png_seeklogo-315870.png" alt="Fondation Mohammed VI">
+              <a href="partners.html#fondation-mohammed-vi"><img src="assets/img/partners/fondation-mohammed-6-logo-png_seeklogo-315870.png" alt="Fondation Mohammed VI"></a>
             </div>
             <div class="partner-logo">
-              <img src="assets/img/partners/credit agricole du maroc .png" alt="Crédit Agricole du Maroc">
+              <a href="partners.html#credit-agricole"><img src="assets/img/partners/credit agricole du maroc .png" alt="Crédit Agricole du Maroc"></a>
             </div>
             <div class="partner-logo">
-              <img src="assets/img/partners/logo EDGS-02.png" alt="EDGS">
+              <a href="partners.html#edgs"><img src="assets/img/partners/logo EDGS-02.png" alt="EDGS"></a>
             </div>
             <div class="partner-logo">
-              <img src="assets/img/partners/logo annexe hay hassani-01.png" alt="Annexe Hay Hassani">
+              <a href="partners.html#annexe-hay-hassani"><img src="assets/img/partners/logo annexe hay hassani-01.png" alt="Annexe Hay Hassani"></a>
             </div>
             <div class="partner-logo">
-              <img src="assets/img/partners/logo vivo maroc.png" alt="Vivo Maroc">
+              <a href="partners.html#vivo-maroc"><img src="assets/img/partners/logo vivo maroc.png" alt="Vivo Maroc"></a>
             </div>
             <div class="partner-logo">
-              <img src="assets/img/partners/achraf hakimi vertical logo noir fr.png" alt="Achraf Hakimi Foundation">
+              <a href="partners.html#achraf-hakimi"><img src="assets/img/partners/achraf hakimi vertical logo noir fr.png" alt="Achraf Hakimi Foundation"></a>
             </div>
             <div class="partner-logo">
-              <img src="assets/img/partners/A4P07-02-2025_15-36-26avision-removebg-preview.png" alt="Avision">
+              <a href="partners.html#fondation-dgsn"><img src="assets/img/partners/A4P07-02-2025_15-36-26avision-removebg-preview.png" alt="Fondation DGSN"></a>
             </div>
             <div class="partner-logo">
-              <img src="assets/img/partners/MARSA_MAROC_LOGO_C_ENG-1-removebg-preview.png" alt="Marsa Maroc">
+              <a href="partners.html#marsa-maroc"><img src="assets/img/partners/MARSA_MAROC_LOGO_C_ENG-1-removebg-preview.png" alt="Marsa Maroc"></a>
             </div>
             <div class="partner-logo">
-              <img src="assets/img/partners/Men_2021-removebg-preview.png" alt="Ministère de l'Éducation Nationale">
+              <a href="partners.html#ministere-education"><img src="assets/img/partners/Men_2021-removebg-preview.png" alt="Ministère de l'Éducation Nationale"></a>
             </div>
           </div>
           <!-- Duplicate set for seamless infinite loop -->
           <div class="partners-logos-set">
             <div class="partner-logo">
-              <img src="assets/img/partners/OCP_Group.svg.png" alt="OCP Group">
+              <a href="partners.html#ocp-group"><img src="assets/img/partners/OCP_Group.svg.png" alt="OCP Group"></a>
             </div>
             <div class="partner-logo">
-              <img src="assets/img/partners/fondation-mohammed-6-logo-png_seeklogo-315870.png" alt="Fondation Mohammed VI">
+              <a href="partners.html#fondation-mohammed-vi"><img src="assets/img/partners/fondation-mohammed-6-logo-png_seeklogo-315870.png" alt="Fondation Mohammed VI"></a>
             </div>
             <div class="partner-logo">
-              <img src="assets/img/partners/credit agricole du maroc .png" alt="Crédit Agricole du Maroc">
+              <a href="partners.html#credit-agricole"><img src="assets/img/partners/credit agricole du maroc .png" alt="Crédit Agricole du Maroc"></a>
             </div>
             <div class="partner-logo">
-              <img src="assets/img/partners/logo EDGS-02.png" alt="EDGS">
+              <a href="partners.html#edgs"><img src="assets/img/partners/logo EDGS-02.png" alt="EDGS"></a>
             </div>
             <div class="partner-logo">
-              <img src="assets/img/partners/logo annexe hay hassani-01.png" alt="Annexe Hay Hassani">
+              <a href="partners.html#annexe-hay-hassani"><img src="assets/img/partners/logo annexe hay hassani-01.png" alt="Annexe Hay Hassani"></a>
             </div>
             <div class="partner-logo">
-              <img src="assets/img/partners/logo vivo maroc.png" alt="Vivo Maroc">
+              <a href="partners.html#vivo-maroc"><img src="assets/img/partners/logo vivo maroc.png" alt="Vivo Maroc"></a>
             </div>
             <div class="partner-logo">
-              <img src="assets/img/partners/achraf hakimi vertical logo noir fr.png" alt="Achraf Hakimi Foundation">
+              <a href="partners.html#achraf-hakimi"><img src="assets/img/partners/achraf hakimi vertical logo noir fr.png" alt="Achraf Hakimi Foundation"></a>
             </div>
             <div class="partner-logo">
-              <img src="assets/img/partners/A4P07-02-2025_15-36-26avision-removebg-preview.png" alt="Avision">
+              <a href="partners.html#fondation-dgsn"><img src="assets/img/partners/A4P07-02-2025_15-36-26avision-removebg-preview.png" alt="Fondation DGSN"></a>
             </div>
             <div class="partner-logo">
-              <img src="assets/img/partners/MARSA_MAROC_LOGO_C_ENG-1-removebg-preview.png" alt="Marsa Maroc">
+              <a href="partners.html#marsa-maroc"><img src="assets/img/partners/MARSA_MAROC_LOGO_C_ENG-1-removebg-preview.png" alt="Marsa Maroc"></a>
             </div>
             <div class="partner-logo">
-              <img src="assets/img/partners/Men_2021-removebg-preview.png" alt="Ministère de l'Éducation Nationale">
+              <a href="partners.html#ministere-education"><img src="assets/img/partners/Men_2021-removebg-preview.png" alt="Ministère de l'Éducation Nationale"></a>
             </div>
           </div>
         </div>
