--- a/partners.html
+++ b/partners.html
@@ -497,19 +497,6 @@
   <!-- Breadcrumb End -->
 
 
-  <!--==============================
-    Hero Section
-  ==============================-->
-  <section class="partners-hero">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-8 text-center">
-          <h1 class="fade-in-up">Nos Partenaires</h1>
-          <p class="fade-in-up">Découvrez les organisations et institutions qui nous accompagnent dans notre mission d'éducation artistique et culturelle pour les enfants.</p>
-        </div>
-      </div>
-    </div>
-  </section>
 
 
   <!--==============================
@@ -517,12 +504,12 @@
   ==============================-->
   <section class="space-top space-extra-bottom">
     <div class="container">
-      <h2 class="section-title fade-in-up">Nos Partenaires Institutionnels</h2>
+      <h2 class="section-title fade-in-up">Partenaires Institutionnels</h2>
       <div class="row g-4">
         
         <!-- Partner 1: Fondation DGSN -->
         <div class="col-lg-4 col-md-6">
-          <div class="partner-card fade-in-up">
+          <div class="partner-card fade-in-up" id="fondation-dgsn">
             <div class="partnership-type">Partenaire Institutionnel</div>
             <div class="partner-logo">
               <img src="assets/img/partners/A4P07-02-2025_15-36-26avision-removebg-preview.png" alt="Fondation DGSN">
@@ -536,8 +523,8 @@
 
         <!-- Partner 2: Crédit Agricole du Maroc -->
         <div class="col-lg-4 col-md-6">
-          <div class="partner-card fade-in-up">
-            <div class="partnership-type">Partenaire Financier</div>
+          <div class="partner-card fade-in-up" id="credit-agricole">
+            <div class="partnership-type">Partenaire Institutionnel</div>
             <div class="partner-logo">
               <img src="assets/img/partners/credit agricole du maroc .png" alt="Crédit Agricole du Maroc">
             </div>
@@ -550,8 +537,8 @@
 
         <!-- Partner 3: Ministère de l'Éducation Nationale -->
         <div class="col-lg-4 col-md-6">
-          <div class="partner-card fade-in-up">
-            <div class="partnership-type">Partenaire Gouvernemental</div>
+          <div class="partner-card fade-in-up" id="ministere-education">
+            <div class="partnership-type">Partenaire Institutionnel</div>
             <div class="partner-logo">
               <img src="assets/img/partners/Men_2021-removebg-preview.png" alt="Ministère de l'Éducation Nationale">
             </div>
@@ -564,8 +551,8 @@
 
         <!-- Partner 4: Fondation Mohammed VI -->
         <div class="col-lg-4 col-md-6">
-          <div class="partner-card fade-in-up">
-            <div class="partnership-type">Partenaire Éducatif</div>
+          <div class="partner-card fade-in-up" id="fondation-mohammed-vi">
+            <div class="partnership-type">Partenaire Institutionnel</div>
             <div class="partner-logo">
               <img src="assets/img/partners/fondation-mohammed-6-logo-png_seeklogo-315870.png" alt="Fondation Mohammed VI">
             </div>
@@ -578,8 +565,8 @@
 
         <!-- Partner 5: OCP Group -->
         <div class="col-lg-4 col-md-6">
-          <div class="partner-card fade-in-up">
-            <div class="partnership-type">Partenaire Industriel</div>
+          <div class="partner-card fade-in-up" id="ocp-group">
+            <div class="partnership-type">Partenaire Institutionnel</div>
             <div class="partner-logo">
               <img src="assets/img/partners/OCP_Group.svg.png" alt="OCP Group">
             </div>
@@ -592,8 +579,8 @@
 
         <!-- Partner 6: Marsa Maroc -->
         <div class="col-lg-4 col-md-6">
-          <div class="partner-card fade-in-up">
-            <div class="partnership-type">Partenaire Portuaire</div>
+          <div class="partner-card fade-in-up" id="marsa-maroc">
+            <div class="partnership-type">Partenaire Institutionnel</div>
             <div class="partner-logo">
               <img src="assets/img/partners/MARSA_MAROC_LOGO_C_ENG-1-removebg-preview.png" alt="Marsa Maroc">
             </div>
@@ -606,8 +593,8 @@
 
         <!-- Partner 7: Vivo Maroc -->
         <div class="col-lg-4 col-md-6">
-          <div class="partner-card fade-in-up">
-            <div class="partnership-type">Partenaire Technologique</div>
+          <div class="partner-card fade-in-up" id="vivo-maroc">
+            <div class="partnership-type">Partenaire Privé</div>
             <div class="partner-logo">
               <img src="assets/img/partners/logo vivo maroc.png" alt="Vivo Maroc">
             </div>
@@ -620,14 +607,14 @@
 
       </div>
 
-      <!-- Educational Partners Section -->
-      <h2 class="section-title fade-in-up" style="margin-top: 5rem;">Nos Partenaires Éducatifs</h2>
+      <!-- Private Partners Section -->
+      <h2 class="section-title fade-in-up" style="margin-top: 5rem;">Partenaires Privés</h2>
       <div class="row g-4">
         
         <!-- Partner 8: EDGS -->
         <div class="col-lg-4 col-md-6">
-          <div class="partner-card fade-in-up">
-            <div class="partnership-type">Établissement Scolaire</div>
+          <div class="partner-card fade-in-up" id="edgs">
+            <div class="partnership-type">Partenaire Privé</div>
             <div class="partner-logo">
               <img src="assets/img/partners/logo EDGS-02.png" alt="EDGS">
             </div>
@@ -640,8 +627,8 @@
 
         <!-- Partner 9: Annexe Hay Hassani -->
         <div class="col-lg-4 col-md-6">
-          <div class="partner-card fade-in-up">
-            <div class="partnership-type">Centre Éducatif</div>
+          <div class="partner-card fade-in-up" id="annexe-hay-hassani">
+            <div class="partnership-type">Partenaire Privé</div>
             <div class="partner-logo">
               <img src="assets/img/partners/logo annexe hay hassani-01.png" alt="Annexe Hay Hassani">
             </div>
@@ -654,8 +641,8 @@
 
         <!-- Partner 10: Achraf Hakimi Foundation -->
         <div class="col-lg-4 col-md-6">
-          <div class="partner-card fade-in-up">
-            <div class="partnership-type">Fondation Sportive</div>
+          <div class="partner-card fade-in-up" id="achraf-hakimi">
+            <div class="partnership-type">Partenaire Privé</div>
             <div class="partner-logo">
               <img src="assets/img/partners/achraf hakimi vertical logo noir fr.png" alt="Fondation Achraf Hakimi">
             </div>
