--- a/spectacles.html
+++ b/spectacles.html
@@ -1042,7 +1042,7 @@
               </div>
             </div>
             <div class="card-content">
-              <h3 class="card-title">École</h3>
+              <h3 class="card-title">Une École</h3>
               <p class="card-description">Établissements scolaires publics et privés</p>
             </div>
             <div class="card-footer">
@@ -1060,7 +1060,7 @@
               </div>
             </div>
             <div class="card-content">
-              <h3 class="card-title">Association</h3>
+              <h3 class="card-title">Une Association</h3>
               <p class="card-description">Organisations à but non lucratif et centres culturels</p>
             </div>
             <div class="card-footer">
@@ -1078,7 +1078,7 @@
               </div>
             </div>
             <div class="card-content">
-              <h3 class="card-title">Particulier</h3>
+              <h3 class="card-title">Un Particulier</h3>
               <p class="card-description">Familles et spectateurs individuels</p>
             </div>
             <div class="card-footer">
