--- a/404.html
+++ b/404.html
@@ -350,7 +350,14 @@
             <div class="col-auto">
               <div class="vs-header__action">
                 <div class="vs-header__right d-none d-md-inline-flex" style="display: flex; gap: 15px; align-items: center;">
-                  <!-- Enhanced Auth buttons will be inserted here by JavaScript -->
+                  <button class="auth-btn login-btn" onclick="window.open('https://hello-planet-app.vercel.app/auth', '_blank')">
+                    <i class="fas fa-user-circle"></i>
+                    Se connecter
+                  </button>
+                  <button class="auth-btn register-btn" onclick="window.open('https://hello-planet-app.vercel.app/auth', '_blank')">
+                    <i class="fas fa-star"></i>
+                    S'inscrire
+                  </button>
                 </div>
                 <button class="vs-menu-toggle style2 d-inline-block d-lg-none">
                   <i class="fal fa-bars"></i>
@@ -539,16 +546,6 @@
         </p>
       </div>
     </div>
-  </div>
-  <!-- ==============================
-    	Popup Search Box
-    ============================== -->
-  <div class="popup-search-box">
-    <button class="searchClose"><i class="fal fa-times"></i></button>
-    <form action="#">
-      <input id="search-field" type="text" class="border-theme" placeholder="What are you looking for">
-      <button type="submit"><i class="fal fa-search"></i></button>
-    </form>
   </div>
   <!--==============================
     Cart Sidebar
