--- a/blog-details.html
+++ b/blog-details.html
@@ -481,7 +481,14 @@
             <div class="col-auto">
               <div class="vs-header__action">
                 <div class="vs-header__right d-none d-md-inline-flex" style="display: flex; gap: 15px; align-items: center;">
-                  <!-- Enhanced Auth buttons will be inserted here by JavaScript -->
+                  <button class="auth-btn login-btn" onclick="window.open('https://hello-planet-app.vercel.app/auth', '_blank')">
+                    <i class="fas fa-user-circle"></i>
+                    Se connecter
+                  </button>
+                  <button class="auth-btn register-btn" onclick="window.open('https://hello-planet-app.vercel.app/auth', '_blank')">
+                    <i class="fas fa-star"></i>
+                    S'inscrire
+                  </button>
                 </div>
                 <button class="vs-menu-toggle style2 d-inline-block d-lg-none">
                   <i class="fal fa-bars"></i>
@@ -757,20 +764,6 @@
         </div>
         <div class="col-lg-4">
           <div class="sidebar-area">
-            <div class="widget widget--search">
-              <form action="#" class="wp-block-search">
-                <label class="wp-block-search__label">
-                  <img src="assets/img/icons/widget-icon-1.svg" alt="icons">
-                  Search
-                </label>
-                <div class="wp-block-search__inside-wrapper">
-                  <input class="wp-block-search__input" id="wp-block-search__input-1" placeholder="Search" type="search" name="s">
-                  <button aria-label="Search" class="wp-block-search__button" type="submit">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                  </button>
-                </div>
-              </form>
-            </div>
             <div class="widget">
               <div class="widget_categories">
                 <h2 class="wp-block-heading">
