--- a/index.html
+++ b/index.html
@@ -2007,10 +2007,15 @@
             </div>
             <div class="col-auto">
               <div class="vs-header__action">
-                <div class="d-none d-md-inline-flex align-items-center">
-                </div>
-                <div class="vs-header__right d-none d-xxl-inline-flex" style="display: flex; gap: 15px; align-items: center;">
-                  <!-- Auth buttons will be inserted here by JavaScript -->
+                <div class="vs-header__right d-none d-md-inline-flex" style="display: flex; gap: 15px; align-items: center;">
+                  <button class="auth-btn login-btn" onclick="window.open('https://hello-planet-app.vercel.app/auth', '_blank')">
+                    <i class="fas fa-user-circle"></i>
+                    Se connecter
+                  </button>
+                  <button class="auth-btn register-btn" onclick="window.open('https://hello-planet-app.vercel.app/auth', '_blank')">
+                    <i class="fas fa-star"></i>
+                    S'inscrire
+                  </button>
                 </div>
                 <button class="vs-menu-toggle style2 d-inline-block d-lg-none">
                   <i class="fal fa-bars"></i>
