--- a/spectacle-charlotte.html
+++ b/spectacle-charlotte.html
@@ -240,6 +240,9 @@
   <!-- Authentication Styles -->
   <link rel="stylesheet" href="assets/css/auth-styles.css">
   <link rel="stylesheet" href="assets/css/enhanced-auth-buttons.css">
+  <!-- Spectacle Sync -->
+  <script src="assets/js/supabase-config.js"></script>
+  <script src="assets/js/spectacle-sync.js"></script>
 </head>
 
 <body>
@@ -475,7 +478,14 @@
             <div class="col-auto">
               <div class="vs-header__action">
                 <div class="vs-header__right d-none d-md-inline-flex" style="display: flex; gap: 15px; align-items: center;">
-                  <!-- Enhanced Auth buttons will be inserted here by JavaScript -->
+                  <button class="auth-btn login-btn" onclick="window.open('https://hello-planet-app.vercel.app/auth', '_blank')">
+                    <i class="fas fa-user-circle"></i>
+                    Se connecter
+                  </button>
+                  <button class="auth-btn register-btn" onclick="window.open('https://hello-planet-app.vercel.app/auth', '_blank')">
+                    <i class="fas fa-star"></i>
+                    S'inscrire
+                  </button>
                 </div>
                 <button class="vs-menu-toggle style2 d-inline-block d-lg-none">
                   <i class="fal fa-bars"></i>
