--- a/partners.html
+++ b/partners.html
@@ -560,11 +560,11 @@
             <div class="col-auto">
               <div class="vs-header__action">
                 <div class="vs-header__right d-none d-md-inline-flex" style="display: flex; gap: 15px; align-items: center;">
-                  <button class="auth-btn login-btn" onclick="window.open('https://hello-planet-app.vercel.app/auth', '_blank')">
+                  <button class="auth-btn login-btn" onclick="window.open('https://hello-planet-app.vercel.app/', '_blank')">
                     <i class="fas fa-user-circle"></i>
                     Se connecter
                   </button>
-                  <button class="auth-btn register-btn" onclick="window.open('https://hello-planet-app.vercel.app/auth', '_blank')">
+                  <button class="auth-btn register-btn" onclick="window.open('https://hello-planet-app.vercel.app/', '_blank')">
                     <i class="fas fa-star"></i>
                     S'inscrire
                   </button>
