--- a/blog.html
+++ b/blog.html
@@ -789,7 +789,7 @@
                     <i class="fas fa-user-circle"></i>
                     Se connecter
                   </button>
-                  <button class="auth-btn register-btn" onclick="window.open('https://hello-planet-app.vercel.app/', '_blank')">
+                  <button class="auth-btn register-btn" onclick="window.open('https://hello-planet-app.vercel.app/?mode=register', '_blank')">
                     <i class="fas fa-star"></i>
                     S'inscrire
                   </button>
